# sqlizer

./: .gitignore  pyproject.toml
api/: pyproject.toml
api/app/: server.py
myenv/: pyvenv.cfg
